# video-fazantix

./: .gitignore  .golangci.yaml  Makefile  README.md  benchmark.py  flake.nix  fosdem.yaml  generate_release.sh  go.mod  go.sum  imagesource.yaml  mixer.go  run.sh  sample_config.yaml  source.go
.circleci/: config.yml
api/: api.go
benchmark/: benchmark.py  pyproject.toml
benchmark/config/: images-720.yaml
config/: config.go
contrib/: follow_metrics.php
debian/: README.debian.adoc  changelog.template  clean  control  copyright  fazantix-data.install  fazantix-frontend.install  fazantix-frontend.linitan-overrides  fazantix-validate-config.install  fazantix-validate-config.manpages  fazantix-wayland.alternatives  fazantix-wayland.install  fazantix-wayland.manpages  fazantix-window.install  fazantix-window.manpages  fazantix-x11.alternatives  fazantix-x11.install  fazantix-x11.linitan-overrides  fazantix-x11.manpages  rules
docs/: docs.go  swagger.json  swagger.yaml
encdec/: encdec.go  frame_allocator.go
examples/: aspect.yaml  aspect2.yaml  fazant.yaml  fosdem.yaml  fosdem_vaapi.yaml  htmlsource.yaml  imagesource.yaml  late_start_test.yaml  multiview.yaml  omt_loop_test.yaml  pdfslides.yaml  presentation.yaml  v4l_test.yaml
ffmpegsink/: ffmpeg_sink.go
ffmpegsource/: ffmpeg_source.go
imgsource/: imgsource.go
kbdctl/: shortcut_keys.go
layer/: framefwd.go  framefwd_rework.md  layer.go
man/: fazantix-validate-config.1.adoc  fazantix-wayland.1.adoc  fazantix-window-wayland.1.adoc  fazantix-window-x11.1.adoc  fazantix-window.1.adoc  fazantix-x11.1.adoc  (+1 more)
(+99 files in other folders)
